--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ dotenvy = "0.15.7"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
 sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "macros", "uuid", "chrono"] }
+thiserror = "2.0.17"
 tokio = { version = "1.48.0", features = ["full"] }
 tower-http = { version = "0.6.6", features = ["trace", "compression-full"] }
 tracing = "0.1.41"
