--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ tokio = { version = "1.48.0", features = ["full"] }
 tower-http = { version = "0.6.6", features = ["trace", "compression-full"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.20", features = ["fmt"] }
+reqwest = "0.12.24"
