--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ tower-http = { version = "0.6.6", features = ["trace", "compression-full"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.20", features = ["fmt"] }
 reqwest = { version = "0.12.24", features = ["json"] }
+tokio-cron-scheduler = "0.15.1"
